--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@types/express": "^5.0.0",
         "concurrently": "^9.1.2",
         "dotenv": "^16.4.7",
-        "express": "^4.21.2"
+        "express": "^4.21.2",
+        "nanoid": "^5.1.0"
     }
 }
