--- a/package.json
+++ b/package.json
@@ -19,12 +19,20 @@
         "typescript": "^5.7.3"
     },
     "dependencies": {
+        "@types/bcrypt": "^5.0.2",
         "@types/better-sqlite3": "^7.6.12",
+        "@types/cookie-parser": "^1.4.8",
+        "@types/cors": "^2.8.17",
+        "@types/jsonwebtoken": "^9.0.8",
+        "bcrypt": "^5.1.1",
         "better-sqlite3": "^11.8.1",
         "concurrently": "^9.1.2",
+        "cookie-parser": "^1.4.7",
+        "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "fastify": "^5.2.1",
         "http-errors": "^2.0.0",
+        "jsonwebtoken": "^9.0.2",
         "nanoid": "^5.1.0"
     }
 }
